<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>
    <string name="header_text">My Nanodegree Apps!</string>
    <string name="app_1" translatable="false">Spotify Streamer</string>
    <string name="app_2" translatable="false">Scores App</string>
    <string name="app_3" translatable="false">Library App</string>
    <string name="app_4" translatable="false">Build It Bigger</string>
    <string name="app_5" translatable="false">XYZ Reader</string>
    <string name="app_6" translatable="false">Capstone: my own App</string>
    <string name="toast">This button will launch</string>
</resources>
