    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:padding="10dp"
        android:gravity="center_horizontal">

        <TextView android:text="@string/header_text" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_1"
            android:id="@+id/button1"
            android:layout_marginTop="20dp"
            android:width="200dp"
            android:background="@color/primary"
            android:textColor="@color/accent"
            android:onClick="displayToast" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_2"
            android:id="@+id/button2"
            android:width="200dp"
            android:background="@color/primary"
            android:layout_marginTop="5dp"
            android:textColor="@color/accent"
            android:onClick="displayToast" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_3"
            android:id="@+id/button3"
            android:width="200dp"
            android:background="@color/primary"
            android:layout_marginTop="5dp"
            android:textColor="@color/accent"
            android:onClick="displayToast" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_4"
            android:id="@+id/button4"
            android:width="200dp"
            android:layout_marginTop="5dp"
            android:background="@color/primary"
            android:textColor="@color/accent"
            android:onClick="displayToast" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_5"
            android:id="@+id/button5"
            android:width="200dp"
            android:layout_marginTop="5dp"
            android:background="@color/primary"
            android:textColor="@color/accent"
            android:onClick="displayToast" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_6"
            android:id="@+id/button6"
            android:width="200dp"
            android:background="@color/primary_dark"
            android:layout_marginTop="5dp"
            android:textColor="@color/accent"
            android:onClick="displayToast" />
    </LinearLayout>
